# kwin-effects-appear1

./: CMakeLists.txt  README.md  kwin-effects-appear1.spec
src/: Appear1Effect.cc  Appear1Effect.h  CMakeLists.txt  Timeline.h  appear1.desktop  appear1.kcfg  appear1config.kcfgc  plugin.cc
